[package]
name = "trusting-manager"
version = "0.1.0"
authors = [""]
edition = "2018"

[dependencies]
serde = "1"
serde_json = "1"
clap = "2"
postgres = { version = "0.15", features = ["with-serde_json", "with-chrono"] }
chrono = "0.4"
clam-client = "0.1"
fallible-iterator = "0.1.4"
r2d2 = "0.8.5"
r2d2_postgres = "0.14"
rayon = "1.1.0"
tempfile = "3.1.0"